--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
 }
 
 .container-custom {
-  @apply container mx-auto px-4 sm:px-6 lg:px-8;
+  @apply w-full max-w-[1280px] mx-auto px-4 sm:px-6 lg:px-8;
 }
 
 .btn {
